fix: fix avatar background in dark mode #785

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -61,7 +61,7 @@
   }
 
   .avatar {
-    background-color: $dark-mode-lighten;
+    --tblr-avatar-bg: #{$dark-mode-lighten};
   }
 
   .avatar-list-stacked .avatar {
